2.3/deployment_multitool_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
        command: ["/bin/sh", "-c", "while true; do sleep 30; done;"]
      volumes:
      - name: nginx-html
        configMap:
          name: nginx-config
